# ghost-vins-eskf

./: .gitignore  CMakeLists.txt  GHOST_V10.md  GHOST_V12_USB_WEBCAM.md  README.md
ghost_sim_ros2/: HARDWARE_CALIBRATION_EVIDENCE.md  README.md  package.xml  setup.cfg  setup.py
ghost_sim_ros2/analysis/: __init__.py  acceptance_gate.py  camera_timing_analysis.py  campaign_analysis.py  campaign_analysis_runner.py  campaign_public_visuals.py  closed_loop_gnc_sil.py  controlled_r_collection_quality.py  controlled_r_protocol_analysis.py  ghost_mh_benchmark.py  ghost_mh_calibrated.py  ghost_mh_calibration_sweep.py  ghost_mh_engine.py  ghost_mh_export_futures.py  ghost_mh_failure_analysis.py  ghost_mh_final_no_camera_benchmark.py  ghost_mh_mode_bank.py  ghost_mh_multi_future_benchmark.py  ghost_mh_research_benchmark.py  ghost_mh_scenarios.py  ghost_mh_summarize_results.py  ghost_mh_sweep.py  ghost_offline_tracker_sweep.py  ghost_software_regime.py  ghost_x_consistency.py  ghost_x_controlled_truth.py  ghost_x_fault_injection.py  ghost_x_fixed_lag.py  ghost_x_offline_estimators.py  ghost_x_regression.py  ghost_x_release.py  ghost_x_runtime.py  ghost_x_trade_study.py  grid_validation_analysis.py  grid_validation_visuals.py  imm_cycle.py  imm_live_bridge.py  imm_mixing.py  imm_tracker.py  measurement_characterization.py  (+13 more)
ghost_sim_ros2/config/: ghost_drone_mission.yaml  ghost_x_claims.yaml  ghost_x_data_contract.yaml  ghost_x_g10_acceptance.yaml  ghost_x_g11_fixed_lag.yaml  ghost_x_g11_selected.yaml  ghost_x_g3_measurement_campaign.yaml  ghost_x_g4_controlled_truth.yaml  ghost_x_g7_selected.yaml  ghost_x_g7_trade_study.yaml  ghost_x_g8_fault_campaign.yaml  ghost_x_g9_runtime.yaml  ghost_x_hardware_calibration_plan.yaml  ghost_x_requirements.yaml  ghost_x_test_catalog.yaml  phase2_candidate_parameters.yaml
ghost_sim_ros2/docs/: CONTROLLED_R_COLLECTION_RUNBOOK.md  DIRECT_CONTROLLED_R_COLLECTION.md  FULL_INTEGRATED_DEMO.md  GHOST_ACCEPTANCE_GATES.md  GHOST_CAMPAIGN_ANALYSIS.md  GHOST_CAMPAIGN_OPERATIONS.md  GHOST_CAMPAIGN_PUBLIC_VISUALS.md  GHOST_CAMPAIGN_STATE.md  GHOST_CAREER_SNIPPETS.md  GHOST_CLOSED_LOOP_GNC_SIL.md  GHOST_DRONE_MISSION_IMPLEMENTATION_REPORT.md  GHOST_DRONE_MISSION_SOFTWARE.md  GHOST_DRONE_MISSION_VALIDATION.json  GHOST_EVIDENCE_INTEGRITY.md  GHOST_GUIDED_HARDWARE_VALIDATION_20260716.json  GHOST_GUIDED_HARDWARE_VALIDATION_20260716.md  GHOST_HARDWARE_BOM.md  GHOST_HARDWARE_FREE_COMPLETION.md  GHOST_HERO_DEMO_PROTOCOL.md  GHOST_IMM_TRACKER.md  GHOST_INTERACTIVE_EVIDENCE_CHECKLIST.md  GHOST_LIVE_BAG_PLOTS.md  GHOST_LIVE_REPLAY_DASHBOARD.html  GHOST_LIVE_STATIONARY_HOLD_RUNBOOK.md  GHOST_MH_FINAL_NO_CAMERA_RUNBOOK.md  GHOST_MH_NO_CAMERA_RESULTS.md  GHOST_MH_RESEARCH_PLAN.md  GHOST_OBSERVABILITY_CRLB.md  GHOST_PARAMETER_LOCK.md  GHOST_PHASE2_OPERATOR_SESSION.md  GHOST_PHYSICAL_VALIDATION_MASTER_RUNBOOK.md  GHOST_PI_VALIDATION_18_2_RUNBOOK.md  GHOST_PORTFOLIO_PACKET.md  GHOST_PROJECT_REPORT.md  GHOST_PUBLIC_RESULTS_REPORT.md  GHOST_PUBLIC_RESULTS_SUMMARY.json  GHOST_PUBLIC_RESULTS_TABLE.csv  GHOST_RELEASE_CLAIMS_REVIEW.md  GHOST_RUNTIME_TIMING_VALIDATION.md  GHOST_SOFTWARE_REGIME_RUNBOOK.md  (+68 more)
ghost_sim_ros2/ghost_sim_ros2/: __init__.py  apriltag_ros_only.py  cv_tracker.py  data_contract.py  evidence_logger.py  formal_imm_tracker.py  gazebo_bridge.py  ghost_world.py  imu_watchdog.py  mh_monitor.py  mh_tracker.py  mh_web_dashboard.py  mission_dashboard.py  mission_evaluator.py  mission_simulator.py  observer_guidance.py  synthetic_measurements.py  trial_recorder.py
ghost_sim_ros2/launch/: ghost_drone_mission.launch.py  ghost_full_demo.launch.py  imu_watchdog.launch.py  pi_only_synthetic_imm.launch.py  sim_tracking.launch.py  sim_tracking_rviz.launch.py
ghost_sim_ros2/resource/: ghost_sim_ros2
ghost_sim_ros2/rviz/: ghost_sim.rviz
ghost_sim_ros2/schemas/: formal_imm_futures.schema.json  ghost_mh_futures.schema.json  mission_validation.schema.json  tracker_status.schema.json
ghost_sim_ros2/test/: showcase_browser_smoke.py  test_acceptance_gate.py  test_campaign_analysis_runner.py  test_campaign_analysis_visuals.py  test_campaign_operations.py  test_closed_loop_gnc_sil.py  test_controlled_r_collection_pipeline.py  test_controlled_r_helper_cli.py  test_controlled_r_tooling.py  test_direct_controlled_r_helper_cli.py  test_evidence_integrity.py  test_export_demo_artifact.py  test_export_live_dashboard_data.py  test_formal_imm_regression_suite.py  test_ghost_software_regime.py  test_ghost_world.py  test_ghost_x_data_contract.py  test_ghost_x_g1.py  test_ghost_x_g10.py  test_ghost_x_g11.py  test_ghost_x_g12.py  test_ghost_x_g2.py  test_ghost_x_g3.py  test_ghost_x_g4.py  test_ghost_x_g6.py  test_ghost_x_g7.py  test_ghost_x_g8.py  test_ghost_x_g9.py  test_ghost_x_hardware_calibration.py  test_grid_validation_analysis.py  test_guided_hardware_launcher.py  test_imm_cycle.py  test_imm_live_bridge.py  test_imm_mixing.py  test_imm_tracker.py  test_imports.py  test_interactive_showcase.py  test_measurement_covariance.py  test_measurement_covariance_config.py  test_measurement_r.py  (+21 more)
ghost_sim_ros2/tools/: analyze_closer_only_run.py  analyze_distance_only_run.py  analyze_live_bag.py  analyze_stationary_R.py  build_ghost_x_release.py  campaign_operations.py  capture_usb_hardware_inventory.py  collect_controlled_r_direct_trial.sh  collect_controlled_r_trial.sh  collect_ghost_x_g3_trial.py  direct_controlled_r_capture.py  evidence_integrity.py  export_demo_artifact.py  export_live_dashboard_data.py  export_vision_pose_csv.py  g2_runtime_contract_probe.py  generate_interactive_showcase_data.py  generate_public_results.py  ghost_x_baseline_manifest.py  guided_hardware_launcher.py  guided_run_analysis.py  init_ghost_x_g3_campaign.py  init_ghost_x_hardware_calibration.py  lock_uvc_camera_controls.sh  make_stationary_noise_summary.py  parameter_lock.py  plot_live_bag.py  rebuild_ghost_x_baseline.sh  run_ghost_x_g10_ci.py  run_ghost_x_g11_fixed_lag.py  run_ghost_x_g4_campaign.py  run_ghost_x_g6_consistency.py  run_ghost_x_g7_trade_study.py  run_ghost_x_g8_fault_campaign.py  start_closer_only_run.py  (+11 more)
(+107 files in other folders)
