<?xml version="1.0"?>
<package format="3">
  <name>ghost_sim_ros2</name>
  <version>0.2.0</version>
  <description>GPS-denied occlusion-aware target tracking, prediction, navigation, simulation, and hardware-validation tools for GHOST.</description>
  <maintainer email="vinayak@example.com">Vinayak Manoj Nair</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
